# docker-python-project-template

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
tests/: test_main.py
